--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@discordjs/rest": "^1.5.0",
     "@discordjs/voice": "^0.14.0",
     "array-move": "^3.0.1",
+    "discord-api-types": "^0.37.28",
     "discord.js": "^13",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^4.4.1",
@@ -41,10 +43,10 @@
   },
   "optionalDependencies": {
     "@discordjs/opus": "^0.9.0",
+    "libsodium-wrappers": "^0.7.10",
     "opusscript": "^0.0.8",
     "sodium-native": "^3.4.1",
-    "tweetnacl": "^1.0.3",
-    "libsodium-wrappers": "^0.7.10"
+    "tweetnacl": "^1.0.3"
   },
   "config": {
     "commitizen": {
